--- a/index.html
+++ b/index.html
@@ -1,2 +1,26 @@
 
-hola
+
+<!DOCTYPE html>
+<html lang="en-us">
+    <head>
+        <meta charset="utf-8">
+        <title>
+       	Mathias Gatti
+        </title>
+        <meta name="author" content="Mathias Gatti" />
+        <link rel="stylesheet" href="/css/bold.css" type="text/css" />
+    </head>
+    <body>
+      <article>
+      <p>Mathias Gatti</p>
+
+<p>Hi! I am a software developer from Argentina specialized in Data Science. I have a computer science degree and several years of experience as a programmer and math teacher. In my spare time I contribute on open source projects. You can check my experience and reviews at <a href="https://www.codementor.io/mathiasgatti">codementor</a>
+
+
+<p>You can ping me via <a href="https://instagram.com/mathigatti">Instagram</a> or <a href="https://facebook.com/mathi.gatti">Facebook</a>. In case of preferring good old email, drop at <a href="mailto:mathigatti@gmail.com">here</a>!</p>
+
+
+      </article>
+    </body>
+</html>
+
