Adding new links

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <article>
       <p>Mathias Gatti</p>
 
-<p>Hi! I am a software developer from Argentina specialized in Data Science. I have a computer science degree and several years of experience as a programmer and math teacher. In my spare time I contribute on open source projects. You can check my experience and reviews at <a href="https://www.codementor.io/mathiasgatti">codementor</a>
+      <p>Hi! I am a software developer from Argentina specialized in Data Science. I have a computer science degree and several years of experience as a programmer and math teacher.</p>
 
+      <p>You can check my experience and reviews at <a href="https://www.codementor.io/mathiasgatti">codementor</a> and some tools and projects I developed on my <a href="https://github.com/mathigatti">GitHub</a>. In my spare time I contribute on open source projects like <a href="https://github.com/Qirky/FoxDot/graphs/contributors">FoxDot</a>, a tool to compose music on real time.</p>
 
-<p>You can ping me via <a href="https://instagram.com/mathigatti">Instagram</a> or <a href="https://facebook.com/mathi.gatti">Facebook</a>. In case of preferring good old email, drop at <a href="mailto:mathigatti@gmail.com">here</a>!</p>
-
+      <p>You can ping me via <a href="https://instagram.com/mathigatti">Instagram</a> or <a href="https://facebook.com/mathi.gatti">Facebook</a>. In case of preferring good old email, drop at <a href="mailto:mathigatti@gmail.com">here</a>!</p>
 
       </article>
     </body>
