--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <article>
       <p>Mathias Gatti</p>
 
-      <p>Hi! I am a software developer from Argentina specialized in Data Science. I have a computer science degree and several years of experience as a programmer and math teacher.</p>
+      <p>Hi,</p>
+  	  <p>I am a software developer from Argentina specialized in Data Science. I have a computer science degree and several years of experience as a programmer and math teacher.</p>
 
       <p>You can check my resume and reviews at <a href="https://www.codementor.io/mathiasgatti">codementor</a> and some tools and projects I developed on my <a href="https://github.com/mathigatti">GitHub</a>. In my spare time I contribute on open source projects like <a href="https://github.com/Qirky/FoxDot/graphs/contributors">FoxDot</a>, a tool for real time music composition.</p>
 
