--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
        	Mathias Gatti
         </title>
         <meta name="author" content="Mathias Gatti" />
+    	<link href="https://fonts.googleapis.com/css?family=DM+Serif+Text&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/bold.css" type="text/css" />
     </head>
     <body>
