--- a/page1.html
+++ b/page1.html
@@ -23,11 +23,16 @@
 	</head>
 
 	<body class="body1">
+
+	<audio controls>
+	  <source src="puzzle/musica/django.mp3" type="audio/mpeg">
+	</audio>
+
 	<table class="box">
     <tr>
         <td>
             <center>
-	            <h2>Animal mas </h2>
+	            <h2></h2>
 	            <p>Vayamos a tu planeta ahora.</p>
 	            <p>232191306</p>
 				<form onSubmit="return checkAnswer();">
@@ -40,10 +45,6 @@
 	</table>
 	<!-- DivTable.com -->
 
-	
-	<embed src="puzzle/musica/django.mp3" width="180" height="90" loop="true" autostart="true" hidden="true" />
-
-	</audio>
 	</body>
 </html>
 
