--- a/page2.html
+++ b/page2.html
@@ -24,6 +24,10 @@
 
 	<body class="body2">
 	<table class="box">
+
+	<audio controls>
+	  <source src="puzzle/musica/debussy.mp3" type="audio/mpeg">
+	</audio>
     <tr>
         <td>
             <center>
@@ -48,10 +52,6 @@
 	</table>
 	<!-- DivTable.com -->
 
-	
-	<embed src="puzzle/musica/debussy.mp3" width="180" height="90" loop="true" autostart="true" hidden="true" />
-
-	</audio>
 	</body>
 </html>
 
