--- a/start.html
+++ b/start.html
@@ -32,9 +32,9 @@
     <tr>
         <td>
             <center>
-	            <h2></h2>
-	            <p>Vayamos a tu planeta ahora.</p>
-	            <p>232191306</p>
+	            <h2>Primera Vez</h2>
+	            <p>Hola, si sabes de alguien mas para decirle del sub grupo de Arte y matematica decile, tenemos que ganarle el grupo original! (?) jaja</p>
+	            <p>HH:MM DD/MM/YYYY</p>
 				<form onSubmit="return checkAnswer();">
 				<input id="answer" type="text"/>
 				<input type="submit" class="submit" value="SUBMIT" />
