--- a/sol.html
+++ b/sol.html
@@ -15,10 +15,10 @@
 	<body class="body3">
 	<!-- DivTable.com -->
 
-	
-	<embed src="puzzle/musica/cigarettes.mp3" width="180" height="90" loop="true" autostart="true" hidden="true" />
-
+	<audio controls>
+	  <source src="puzzle/musica/cigarettes.mp3" type="audio/mpeg">
 	</audio>
+	
 	</body>
 </html>
 
