--- a/start.html
+++ b/start.html
@@ -13,7 +13,7 @@
 	<script>
 		function checkAnswer(){
 		    var response = document.getElementById('answer').value;
-		    if (response == "correctanswer")
+		    if (response == "10:20 28/12/2014")
 		        location = 'page2.html';
 		    else
 		        window.alert("Try again!");
