--- a/sol.html
+++ b/sol.html
@@ -15,6 +15,18 @@
 	<body class="body3">
 	<!-- DivTable.com -->
 
+	<table class="box"  style="background-color:rgba(0, 0, 0, 0);">
+
+    <tr>
+        <td>
+            <center>
+	          <button onclick="window.location.href = 'https://solquemal.com';">un boton</button>
+           </center>
+        </td>
+    </tr>
+	</table>
+
+
 	<audio controls>
 	  <source src="puzzle/musica/cigarettes.mp3" type="audio/mpeg">
 	</audio>
