--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
       <p>Mathias Gatti</p>
 
       <p>Hi,<br>
-  	  I am a software developer from Argentina specialized in Data Science. I have a computer science degree and several years of experience as a programmer and math teacher.</p>
+  	  I am a software developer from Argentina specialized in Data Science and Creative Coding. I have a computer science degree and several years of experience as a programmer and math teacher.</p>
 
       <p>You can check my resume and reviews at <a href="https://www.codementor.io/mathiasgatti">codementor</a>. Tools and projects I developed can be found at my <a href="https://github.com/mathigatti">GitHub</a>. In my spare time I contribute on open source projects like <a href="https://github.com/Qirky/FoxDot/graphs/contributors">FoxDot</a>, a real time music composition framework.</p>
+
+      <p>I take part into <a href="https://www.instagram.com/bu3namigue/">bu3nAmigue</a>, an artistic collective that applies technology to the arts.</p>
 
       <p>You can ping me via <a href="https://instagram.com/mathigatti">Instagram</a> or <a href="https://facebook.com/mathi.gatti">Facebook</a>. In case of preferring good old email, drop at <a href="mailto:mathigatti@gmail.com">here</a>!</p>
 
